Kaggle Notebook | Blue_print_for_regression | Version 3

--- a/blue-print-for-regression.ipynb
+++ b/blue-print-for-regression.ipynb
@@ -2,47 +2,71 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f429ea70",
+   "id": "d8beaded",
    "metadata": {
     "papermill": {
-     "duration": 0.005844,
-     "end_time": "2023-09-04T17:43:54.895237",
+     "duration": 0.005634,
+     "end_time": "2023-09-05T17:48:19.878926",
      "exception": false,
-     "start_time": "2023-09-04T17:43:54.889393",
+     "start_time": "2023-09-05T17:48:19.873292",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# ⛳️ 1. Look at the Big picture "
+    "# ⛳️ 1. Look at the Big picture \n",
+    "🟢 Read, Understand the Problem\n",
+    "\n",
+    "### 🔸 Frame the problem\n",
+    "* 🟢 Note what we want to acheive.\n",
+    "* 🟢 Form a hypothesis and decide the end goal and identify the format to acheive.\n",
+    "* 🟢 Decide on :\n",
+    "* * 🔰 Suppervised/Unsupervised/Reinforced/Classification/Regression ?\n",
+    "* * 🔰 Univariate/BiVariate ?\n",
+    "* * 🔰 Single target or Multi target ?\n",
+    "\n",
+    "### 🔸 Select Performance measure\n",
+    "* 🟢  RMSE\n",
+    "* 🟢  MAE (best fit if there are many outliers)\n",
+    "\n",
+    "### 🔸 Check for Assumptions\n",
+    "* 🟢  Check for general information about the topic. Get the assumptions and features which needs more conciderations. etc.."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9133f144",
+   "id": "437c8029",
    "metadata": {
     "papermill": {
-     "duration": 0.004406,
-     "end_time": "2023-09-04T17:43:54.904664",
+     "duration": 0.004412,
+     "end_time": "2023-09-05T17:48:19.888356",
      "exception": false,
-     "start_time": "2023-09-04T17:43:54.900258",
+     "start_time": "2023-09-05T17:48:19.883944",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# ⛳️ 2. Get the Data"
+    "# ⛳️ 2. Get the Data\n",
+    "🟢 Make sure you collect the data from trusted sources and legal sources.\n",
+    "\n",
+    "### 🔸 Take a quick look\n",
+    "* 🟢 Read the Data into a panda dataframe \n",
+    "* 🟢 **.head()** check for the columns and values represented\n",
+    "* 🟢 **.info()** check for non-null and datatypes presented\n",
+    "* 🟢 **.value_counts()** check for each category columns occurances of value\n",
+    "* 🟢 **.describe()** check for mean, min, max, std values of numerical columns"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c7a6d714",
+   "id": "19f704ce",
    "metadata": {
     "papermill": {
-     "duration": 0.004248,
-     "end_time": "2023-09-04T17:43:54.913500",
+     "duration": 0.004317,
+     "end_time": "2023-09-05T17:48:19.897195",
      "exception": false,
-     "start_time": "2023-09-04T17:43:54.909252",
+     "start_time": "2023-09-05T17:48:19.892878",
      "status": "completed"
     },
     "tags": []
@@ -53,13 +77,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398be873",
+   "id": "9fbb520c",
    "metadata": {
     "papermill": {
-     "duration": 0.004183,
-     "end_time": "2023-09-04T17:43:54.922196",
+     "duration": 0.004281,
+     "end_time": "2023-09-05T17:48:19.905968",
      "exception": false,
-     "start_time": "2023-09-04T17:43:54.918013",
+     "start_time": "2023-09-05T17:48:19.901687",
      "status": "completed"
     },
     "tags": []
@@ -70,13 +94,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e740cc4",
+   "id": "4c8c4320",
    "metadata": {
     "papermill": {
-     "duration": 0.004164,
-     "end_time": "2023-09-04T17:43:54.930934",
+     "duration": 0.004238,
+     "end_time": "2023-09-05T17:48:19.914758",
      "exception": false,
-     "start_time": "2023-09-04T17:43:54.926770",
+     "start_time": "2023-09-05T17:48:19.910520",
      "status": "completed"
     },
     "tags": []
@@ -87,13 +111,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4f93783",
+   "id": "927b8b7d",
    "metadata": {
     "papermill": {
-     "duration": 0.004065,
-     "end_time": "2023-09-04T17:43:54.939328",
+     "duration": 0.004182,
+     "end_time": "2023-09-05T17:48:19.923365",
      "exception": false,
-     "start_time": "2023-09-04T17:43:54.935263",
+     "start_time": "2023-09-05T17:48:19.919183",
      "status": "completed"
     },
     "tags": []
@@ -104,13 +128,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628ef58d",
+   "id": "33f059b3",
    "metadata": {
     "papermill": {
-     "duration": 0.004045,
-     "end_time": "2023-09-04T17:43:54.947630",
+     "duration": 0.0046,
+     "end_time": "2023-09-05T17:48:19.932558",
      "exception": false,
-     "start_time": "2023-09-04T17:43:54.943585",
+     "start_time": "2023-09-05T17:48:19.927958",
      "status": "completed"
     },
     "tags": []
@@ -122,13 +146,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7590ae93",
+   "id": "8d4c1a60",
    "metadata": {
     "papermill": {
-     "duration": 0.005278,
-     "end_time": "2023-09-04T17:43:54.957354",
+     "duration": 0.004295,
+     "end_time": "2023-09-05T17:48:19.941710",
      "exception": false,
-     "start_time": "2023-09-04T17:43:54.952076",
+     "start_time": "2023-09-05T17:48:19.937415",
      "status": "completed"
     },
     "tags": []
@@ -174,14 +198,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 4.211292,
-   "end_time": "2023-09-04T17:43:55.483722",
+   "duration": 6.532862,
+   "end_time": "2023-09-05T17:48:22.642330",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-09-04T17:43:51.272430",
+   "start_time": "2023-09-05T17:48:16.109468",
    "version": "2.4.0"
   }
  },
